teste sur le js et finalisation du menu.

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
                                     <li><a href="#">carte3</a></li>
                                 </ul>
                             </li>
-                            <li id="menu_faction1"><a href="#">Faction2</a>
+                            <li id="menu_faction1"><a href="#">Tourelle</a>
                                 <ul class="niveauDeux">
                                     <li><a href="#">tourelle1</a></li>
-                                    <li><a href="#">tourelle2</a></li>
+                                    <li id="toto"><a href="#">tourelle2</a></li>
                                     <li><a href="#">tourelle3</a></li>     
                                 </ul>
                             </li>
-                            <li id="menu_faction2"><a href="#">Faction2</a>
+                            <li id="menu_faction2"><a href="#">Unité</a>
                                 <ul class="niveauDeux">
                                     <li><a href="#">unité1</a></li>
                                     <li><a href="#">unité2</a></li>
@@ -125,12 +125,17 @@
                         </ul>
                     </nav>
                     <article>
-                        <img class="imageMinActive" src="images/renduUL.png" alt="perso">
+                        <img class="imageMinActive" src="images/renduUL.png" alt="perso1">
+                        <img class="imageMinInactive" src="images/SniperRender001.png" alt="perso2">
                         <img class="imageMinInactive" src="images/renduUL.png" alt="perso">
                         <img class="imageMinInactive" src="images/renduUL.png" alt="perso">
                         <img class="imageMinInactive" src="images/renduUL.png" alt="perso">
                         <img class="imageMinInactive" src="images/renduUL.png" alt="perso">
-                        <img class="imageMinInactive" src="images/renduUL.png" alt="perso">
+                        
+                        <p class="textActif">Pellentesque porta libero non placerat ultrices. Pellentesque commodo dui arcu, eget molestie neque interdum pellentesque. Vivamus ac euismod tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus dapibus eleifend nunc id sagittis. In ultrices ullamcorper velit, in venenatis velit iaculis eget. Curabitur ut quam quis magna mattis porta eget ac arcu. Fusce lobortis urna nunc. In imperdiet diam vitae elit ultrices, ac lobortis massa condimentum. Nam eget magna felis. Nunc a ipsum vitae enim dignissim consequat. Proin placerat arcu tempus lorem suscipit, sit amet bibendum dolor varius.<br /></p>
+                        <p class="textInactif">Pellentesque porta libero non placerat ultrices. Pellentesque commodo dui arcu, eget molestie neque interdum pellentesque. Vivamus ac euismod tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus dapibus eleifend nunc id sagittis. In ultrices ullamcorper velit, in venenatis velit iaculis eget. Curabitur ut quam quis magna mattis porta eget ac arcu. Fusce lobortis urna nunc. In imperdiet diam vitae elit ultrices, ac lobortis massa condimentum. Nam eget magna felis. Nunc a ipsum vitae enim dignissim consequat. Proin placerat arcu tempus lorem suscipit, sit amet bibendum dolor varius.<br /></p>
+                        <p class="textInactif">Pellentesque porta libero non placerat ultrices. Pellentesque commodo dui arcu, eget molestie neque interdum pellentesque. Vivamus ac euismod tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus dapibus eleifend nunc id sagittis. In ultrices ullamcorper velit, in venenatis velit iaculis eget. Curabitur ut quam quis magna mattis porta eget ac arcu. Fusce lobortis urna nunc. In imperdiet diam vitae elit ultrices, ac lobortis massa condimentum. Nam eget magna felis. Nunc a ipsum vitae enim dignissim consequat. Proin placerat arcu tempus lorem suscipit, sit amet bibendum dolor varius.<br /></p>
+                        <p class="textInactif">Pellentesque porta libero non placerat ultrices. Pellentesque commodo dui arcu, eget molestie neque interdum pellentesque. Vivamus ac euismod tortor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus dapibus eleifend nunc id sagittis. In ultrices ullamcorper velit, in venenatis velit iaculis eget. Curabitur ut quam quis magna mattis porta eget ac arcu. Fusce lobortis urna nunc. In imperdiet diam vitae elit ultrices, ac lobortis massa condimentum. Nam eget magna felis. Nunc a ipsum vitae enim dignissim consequat. Proin placerat arcu tempus lorem suscipit, sit amet bibendum dolor varius.<br /></p>
                     </article>
                 </div>
             </section>
