--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                         <img class="imageMinInactive" src="images/SniperRender001.png" alt="tourelle1">
                         <img class="imageMinInactive" src="images/SniperRender001.png" alt="tourelle2">
                         <img class="imageMinInactive" src="images/SniperRender001.png" alt="tourelle3">
-                        <img class="imageMinActive" src="images/renduUN2%20(2).png" alt="unités légère">
-                        <img class="imageMinInactive" src="images/renduUR.png" alt="unité rapide">
-                        <img class="imageMinInactive" src="images/rendu2.png" alt="unité lourde">
+                        <img class="imageMinActive" src="images/uniteLegere.png" alt="unités légère">
+                        <img class="imageMinInactive" src="images/uniteRapide.png" alt="unité rapide">
+                        <img class="imageMinInactive" src="images/uniteLourde.png" alt="unité lourde">
                         
                         
                         <p class="textInactif" alt="carte1">Texte sur carte 1<br /></p>
