le js pour les images fonctionnent

--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
                         <ul id="niveauUn">
                             <li id="menu_system">Sytème
                                 <ul class="niveauDeux">
-                                    <li desc="">carte1</li>
-                                    <li desc="">carte2</li>
-                                    <li desc="">carte3</li>
+                                    <li desc="carte1">carte1</li>
+                                    <li desc="carte2">carte2</li>
+                                    <li desc="carte3">carte3</li>
                                 </ul>
                             </li>
                             <li id="menu_faction1">Tourelles
                                 <ul class="niveauDeux">
-                                    <li desc="">tourelle1</li>
-                                    <li desc="">tourelle2</li>
-                                    <li desc="">tourelle3</li>     
+                                    <li desc="tourelle1">tourelle1</li>
+                                    <li desc="tourelle2">tourelle2</li>
+                                    <li desc="tourelle3">tourelle3</li>     
                                 </ul>
                             </li>
                             <li id="menu_faction2">Unités
@@ -119,28 +119,29 @@
                         </ul>
                     </nav>
                     <article>
-                        <img class="imageMinInactive" desc="" src="" alt="carte1">
-                        <img class="imageMinInactive" desc="" src="" alt="carte2">
-                        <img class="imageMinInactive" desc="" src="" alt="carte3">
-                        <img class="imageMinInactive" desc="" src="images/SniperRender001.png" alt="tourelle1">
-                        <img class="imageMinInactive" desc="" src="images/SniperRender001.png" alt="tourelle2">
-                        <img class="imageMinInactive" desc="" src="images/SniperRender001.png" alt="tourelle3">
-                        <img class="imageMinActive" desc="" desc="uniteLegere" src="images/uniteLegere.png" alt="unité légère">
+                        <div>
+                        <img class="imageMinInactive" desc="carte1" src="" alt="carte1">
+                        <img class="imageMinInactive" desc="carte2" src="" alt="carte2">
+                        <img class="imageMinInactive" desc="carte3" src="" alt="carte3">
+                        <img class="imageMinInactive" desc="tourelle1" src="images/SniperRender001.png" alt="tourelle1">
+                        <img class="imageMinInactive" desc="tourelle2" src="images/SniperRender001.png" alt="tourelle2">
+                        <img class="imageMinInactive" desc="tourelle3" src="images/SniperRender001.png" alt="tourelle3">
+                        <img class="imageMinActive" desc="uniteLegere" src="images/uniteLegere.png" alt="unité légère">
                         <img class="imageMinInactive" desc="uniteRapide" src="images/uniteRapide.png" alt="unité rapide">
                         <img class="imageMinInactive" desc="uniteLourde" src="images/uniteLourde.png" alt="unité lourde">
+                        </div>
                         
-                        
-                        <p class="textInactif" desc="" alt="carte1">Texte sur carte 1<br /></p>
-                        <p class="textInactif" desc="" alt="carte2">Texte sur carte 2<br /></p>
-                        <p class="textInactif" desc="" alt="carte3">Texte sur carte 3<br /></p>
-                        <p class="textInactif" desc="" alt="tourelle1">Texte sur tourelle 1<br /></p>
-                        <p class="textInactif" desc="" alt="tourelle2">Texte sur tourelle 2<br /></p>
-                        <p class="textInactif" desc="" alt="tourelle3">Texte sur tourelle 3<br /></p>
-                        <p class="textInactif" desc="" alt="tourelle3">Texte sur tourelle 3<br /></p>
-                        <p class="textInactif" desc="" alt="tourelle3">Texte sur tourelle 3<br /></p>
-                        <p class="textActif" desc="uniteLegere"  alt="unité légère">Ces soldats d'élites sur-entrainés sont nés pour le combat, élevés pour le combat et mourront surement en plein combat mais faites que ce ne soit pas trop près de votre nexus.<br /></p>
+                        <div>
+                        <p class="textInactif" desc="carte1" alt="carte1">Texte sur carte 1<br /></p>
+                        <p class="textInactif" desc="carte2" alt="carte2">Texte sur carte 2<br /></p>
+                        <p class="textInactif" desc="carte3" alt="carte3">Texte sur carte 3<br /></p>
+                        <p class="textInactif" desc="tourelle1" alt="tourelle1">Texte sur tourelle 1<br /></p>
+                        <p class="textInactif" desc="tourelle2" alt="tourelle2">Texte sur tourelle 2<br /></p>
+                        <p class="textInactif" desc="tourelle3" alt="tourelle3">Texte sur tourelle 3<br /></p>
+                        <p class="textActif" desc="uniteLegere" alt="unité légère">Ces soldats d'élites sur-entrainés sont nés pour le combat, élevés pour le combat et mourront surement en plein combat mais faites que ce ne soit pas trop près de votre nexus.<br /></p>
                         <p class="textInactif" desc="uniteRapide" alt="unité rapide">Ces unités sont plus rapides et silencieuses que les unités légères. On pourrait aussi dire qu'elles sont plus meurtrières. Regardez bien derrière vous!<br /></p>
                         <p class="textInactif" desc="uniteLourde" alt="unité lourde">Ces unités ont une force et une résistance accrues grâce à leur blindage à toute épreuve. <br /></p>
+                        </div>
                     </article>
                 </div>
             </section>
